# aoc-2022

day1/: Cargo.toml
day1/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day12/: Cargo.toml
day13/: Cargo.toml
day14/: Cargo.toml
day14/src/: lib.rs
day15/: Cargo.toml
day15/src/: lib.rs
day16/: Cargo.toml
day2/: Cargo.toml
day2/src/: main.rs
day3/src/: main.rs
day4/src/: main.rs
day5/src/: main.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: main.rs
day8/src/: main.rs
day9/: Cargo.toml
day9/src/: main.rs
