[package]
name = "day11"
version = "0.1.0"
edition = "2021"
default-run = "part2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
joinery = "3.1.0"
lazy_format = "2.0.0"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
regex = "1.7.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
